public class PizzaFromage extends Pizza {

}
