------------------------
c:\blt\gitcpoa-REMOTE-WORKING\cpoa\images\Pizzeria2.png

@startuml

' definitions
' -----------

' package ""
abstract Pizza
class PizzaFromage
class PizzaRoyale
class PizzaSaumon
class PizzaVegetarienne
class Pizzeria
class SimpleFabriqueDePizzas
' end package

Pizzeria  ..>  Pizza:*
SimpleFabriqueDePizzas  ..>  Pizza:new
' content
' -------

' Pizzeria:
Pizzeria -> "1" SimpleFabriqueDePizzas
Pizzeria : + Pizzeria(SimpleFabriqueDePizzas)
Pizzeria : + Pizza commanderPizza(String)

' PizzaRoyale:
Pizza <|-- PizzaRoyale
PizzaRoyale : + PizzaRoyale()

' SimpleFabriqueDePizzas:
SimpleFabriqueDePizzas : + SimpleFabriqueDePizzas()
SimpleFabriqueDePizzas : + Pizza creerPizza(String)

' PizzaVegetarienne:
Pizza <|-- PizzaVegetarienne
PizzaVegetarienne : + PizzaVegetarienne()

' Pizza:
Pizza : + Pizza()
Pizza : + void preparer()
Pizza : + void cuire()
Pizza : + void couper()
Pizza : + void emballer()

' PizzaSaumon:
Pizza <|-- PizzaSaumon
PizzaSaumon : + PizzaSaumon()

' PizzaFromage:
Pizza <|-- PizzaFromage
PizzaFromage : + PizzaFromage()

@enduml

PlantUML version 8009beta1(8009beta1)
(GPL source distribution)
Java(TM) SE Runtime Environment
Java HotSpot(TM) 64-Bit Server VM
1.6.0_65-b14-466.1-11M4716
Mac OS X
------------------------
